<resources>
    <string name="app_name">APIProject</string>
    <string name="addData">Добавить запись</string>
    <string name="namePaste">Название</string>
    <string name="abrasiveness">Образивность</string>
    <string name="price">Стоимость</string>
    <string name="country_of_origin">Страна производитель</string>
    <string name="volume">Обьем</string>
    <string name="photo">Фото</string>
    <string name="add">Добавить</string>
    <string name="back">Назад</string>
    <string name="safe">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="deleteImage">Удалить фото</string>
    <string name="sort">Сортировка:</string>
    <string-array name="spinnerItems">
        <item>нет</item>
        <item>по наименованию</item>
        <item>по количеству</item>
        <item>по цене</item>
    </string-array>
</resources>