<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddData">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@id/NamePaste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stock_photo" />

    <EditText
        android:id="@+id/NamePaste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/namePaste"
        app:layout_constraintBottom_toTopOf="@id/Volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/AbrasivenessIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/abrasiveness"
        app:layout_constraintBottom_toTopOf="@id/CountryOrigin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NamePaste" />
    <EditText
        android:id="@+id/CountryOrigin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country_of_origin"
        app:layout_constraintBottom_toTopOf="@id/Volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AbrasivenessIndex" />
    <EditText
        android:id="@+id/Volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/volume"
        app:layout_constraintBottom_toTopOf="@id/Price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CountryOrigin" />

    <EditText
        android:id="@+id/Price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        app:layout_constraintBottom_toTopOf="@id/btnSafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Volume" />

    <android.widget.Button
        android:id="@+id/btnSafe"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/style_for_btn"
        android:text="@string/safe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Price" />

    <android.widget.Button
        android:id="@+id/btnDel"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:background="@drawable/style_for_btn"
        app:layout_constraintBottom_toTopOf="@+id/NamePaste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <android.widget.Button
        android:id="@+id/btnBack"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_for_btn"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnSafe"
        app:layout_constraintTop_toBottomOf="@+id/Price" />

</androidx.constraintlayout.widget.ConstraintLayout>