<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stock_photo" />

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/NamePaste"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/namePaste"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/Abrasiveness"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/abrasiveness"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/Volume"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/volume"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/line">

            <TextView
                android:id="@+id/countryOrigin"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/country_of_origin"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>